--- a/examples/Turing/manifest.json
+++ b/examples/Turing/manifest.json
@@ -28,6 +28,7 @@
 		"web-root": "web/",
 		"port": 5810,
 		"mqttHost": "",
-		"mqttPort": 5800
+		"mqttPort": 5800,
+		"workingBinPath": "/home/lvuser/FRCUserProgram"
 	}
 }
